k8s/b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: h2l
      tier: backend
      # track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: h2l
        tier: backend
        # track: stable
    spec:
      containers:
        - name: h2l-b
          image: tinclaire225/howtolose-backend
          ports:
            - name: b-port
              containerPort: 8080
