k8s/f-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend3
spec:
  selector:
    matchLabels:
      app: h2l
      tier: frontend
      # track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: h2l
        tier: frontend
        # track: stable
    spec:
      containers:
      - name: h2l-f
        image: cdxvy30/h2l-test # This is for test.
        ports:
        - name: f-port
          containerPort: 80
          # value: http://localhost/
        # lifecycle:
        #   preStop:
        #     exec:
        #       command: ["/usr/sbin/nginx","-s","quit"]
