k8s/b-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: b-service
# spec:
#   ports:
#   - port: 8080
#     protocol: TCP
#     # nodePort: 8080
#     targetPort: 8080
#   selector:
#     app: b
#   type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: h2l
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30048
  type: NodePort
