k8s/h-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h2l
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # ingressClassName: ingress
  rules:
  # - host: blue.demo.com
  - http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: frontend3
            port:
              number: 80
  # - host: purple.demo.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
